# tokenblood

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ai-ci.yaml  backend-ci.yaml  backend-docker.yml
ai/: .env.example  Makefile  README.md  pyproject.toml
ai/data/: ai4privacy-many-persons-validation.csv
ai/data/ai4privacy-v1/: cleaned.csv  cleaned.md  raw.md
ai/notebooks/: evaluate-model.ipynb
ai/notebooks/datasets/: README.md  ai4privacy.ipynb  isotonic.ipynb
ai/src/: __init__.py  data.py  evaluate.py  llm_infer.py  metrics.py
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: auth_view.py  main.py
backend/app/api/: leaderboard.py  model.py  submit.py
backend/app/core/: config.py  database.py  session.py
backend/app/mock_data/: constants.py  submissions.py  users.py
backend/app/models/: crud_mixin.py  submission.py  user.py
backend/tests/: conftest.py  test_evaluate.py  test_submit.py
backend/tests/test_data/: personal_info_extraction_debug.csv  submissions.json  users.json
frontend/: Dockerfile  README.md  nginx.conf
frontend/tokenblood/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/tokenblood/src/: App.vue
frontend/tokenblood/src/api/: leaderboard.ts  task.ts
frontend/tokenblood/src/assets/: base.css  main.css
frontend/tokenblood/src/components/: ErrorNotification.vue  LoginForm.vue
frontend/tokenblood/src/router/: index.ts
frontend/tokenblood/src/stores/: auth.ts  errorStore.ts
(+8 files in other folders)
