[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Shamil Arslanov",email = "sh.arslanov.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "src @ file:///Users/shamilarslanov/Projects/MaximLLMArena/tokenblood/ai",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pytest-xdist = "^3.6.1"
httpx = "^0.28.1"


[tool.poetry.dependencies]
src = {develop = true}
